[gd_scene load_steps=6 format=3 uid="uid://c0ynell8yescv"]

[ext_resource type="Script" uid="uid://cfn3chbaks0qv" path="res://units/unit_template/unit_template.gd" id="1_63u0p"]
[ext_resource type="Texture2D" uid="uid://di4bggnp76ya4" path="res://units/unit_template/assets/unit template.png" id="1_jt0dc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ckdd0"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6l06b"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0l5mx"]
radius = 59.0085

[node name="Unit Template" type="CharacterBody2D"]
script = ExtResource("1_63u0p")

[node name="Image" type="Sprite2D" parent="."]
modulate = Color(0.765334, 0.962204, 0.956294, 1)
texture_filter = 1
texture = ExtResource("1_jt0dc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ckdd0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6l06b")

[node name="Vision" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_0l5mx")

[node name="Reload" type="Timer" parent="."]

[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
